package com.lds.aluguel_carros.enums;

public enum PrazoAluguel {
    MESES_12,
    MESES_24,
    MESES_36,
    MESES_48
}