package com.lds.aluguel_carros.enums;

public enum StatusAutomovel {
    DISPONIVEL, 
    ALUGADO
}
