package com.lds.aluguel_carros.enums;

public enum StatusContrato {
    ATIVO,
    INATIVO
}