package com.lds.aluguel_carros.enums;

public enum StatusPedido {
    PENDENTE,
    APROVADO,
    REPROVADO,
    CANCELADO,
    EXECUTADO
}