package com.lds.aluguel_carros.enums;

public enum TipoUsuario {
    CLIENTE,
    AGENTE,
    FUNCIONARIO_BANCO
}
