@startuml DiagramaDeClasses
left to right direction

enum StatusPedido {
    PENDENTE
    APROVADO
    REPROVADO
    CANCELADO
    EXECUTADO
}

enum StatusContrato {
    ATIVO
    INATIVO
}

enum TipoUsuario {
    CLIENTE
    AGENTE
    FUNCIONARIO_BANCO
}

enum StatusAutomovel {
    DISPONIVEL
    ALUGADO
}

enum PrazoAluguel {
    12M
    24M
    36M
    48M
}

abstract class Usuario {
    - id: int
    - nome: string
    - email: string
    - senha: string
    - tipo: TipoUsuario
}

class Agente {
    - cnpj: string
    - cargo: string
}

class FuncionarioEmpresa {
    - empresa: string
}

class FuncionarioBanco {
    - cargo: string
    - banco: string
}

class Cliente {
    - rg: string
    - cpf: string
    - profissao: string
    - endereco: string
    - rendimentos: List<Rendimento>
}

class Rendimento {
    - id: int
    - nome: string
    - cnpj: string
    - atual: boolean
    - renda: BigDecimal
    - dataInicio: Date
    - dataFim: Date
}

class Aluguel {
    - id: int
    - prazo: PrazoAluguel
    - status: StatusPedido
    - valor: BigDecimal
    - dataInicio: Date
    - contrato: ContratoAluguel
    - automovel: Automovel
    - adquirirPropriedade: boolean
}

class Automovel {
    - id: int
    - matricula: string
    - ano: int
    - marca: string
    - modelo: string
    - placa: string
    - status: StatusAutomovel
    - valorMensal: BigDecimal
    - proprietario: Usuario
}

class ContratoAluguel {
    - id: int
    - status: StatusContrato
    - valorTotal: BigDecimal
    - credito: Credito
    - propriedade: Usuario
}

class Credito {
    - id: int
    - valor: BigDecimal
    - taxaJuros: BigDecimal
    - concedente: FuncionarioBanco
}

Usuario <|-- Cliente
Usuario <|-- Agente
Agente <|-- FuncionarioEmpresa
Agente <|-- FuncionarioBanco

Cliente -- Aluguel : solicita >

Agente "1" -- "*" Aluguel : avalia >

FuncionarioBanco "1" -- "*" Credito : concede >

Aluguel "1" -- "1" Automovel : possui >
Aluguel "1" -- "1" ContratoAluguel : possui >

ContratoAluguel "1" -- "1" Credito : associado a >

Cliente "1" -- "0..3" Rendimento : possui >

@enduml